fix list-actions-menu z-index

--- a/src/components/ItemList.css
+++ b/src/components/ItemList.css
@@ -65,6 +65,7 @@
   padding: .5rem;
   border-radius: var(--radius);
   box-shadow: 1px 1px 5px rgba(0, 0, 0, .1);
+  z-index:1;
 }
 
 .list-actions-menu button {
